--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,25 +8,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: eclipse-temurin:21-jdk
+      image: maven:3.9.8-eclipse-temurin-21
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Make mvnw executable (if present)
-        run: |
-          if [ -f "./mvnw" ]; then
-            chmod +x mvnw
-          fi
-
       - name: Build with Maven
-        run: |
-          if [ -f "./mvnw" ]; then
-            ./mvnw -B clean test package
-          else
-            mvn -B clean test package
-          fi
+        run: mvn -B clean test package
 
       - name: Upload JAR artifacts
         uses: actions/upload-artifact@v4
@@ -45,12 +34,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install Semgrep
+        run: pip install semgrep
+
       - name: Run Semgrep SAST
-        uses: returntocorp/semgrep-action@v1
-        with:
-          config: auto
-          generateSarif: true
-          output: semgrep-report.sarif
+        run: semgrep ci --config auto --sarif -o semgrep-report.sarif
 
       - name: Upload SARIF to GitHub Security
         uses: github/codeql-action/upload-sarif@v4
