--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,35 +1,76 @@
-name: Maven CI
+name: Java CI with Maven and Security
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
+
+permissions:
+  contents: read
+  security-events: write
 
 jobs:
-  build:
+  secrets-detection:
+    name: Secrets detection (Gitleaks)
     runs-on: ubuntu-latest
-    container:
-      image: eclipse-temurin:21-jdk
-
     steps:
-      - name: Checkout repository
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Run Gitleaks (fail if secrets found)
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build:
+    name: Build (Maven)
+    runs-on: ubuntu-latest
+    needs: [secrets-detection]
+    steps:
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Make mvnw executable (if present)
-        run: |
-          if [ -f "./mvnw" ]; then
-            chmod +x mvnw
-          fi
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: "21"
+          cache: maven
 
-      - name: Build with Maven
+      - name: Build with Maven Wrapper
         run: |
-          if [ -f "./mvnw" ]; then
-            ./mvnw -B clean test package
-          else
-            mvn -B clean test package
-          fi
+          chmod +x mvnw
+          ./mvnw -q -ntp clean test package
 
-      - name: Upload JAR artifacts
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-jars
-          path: ./target/*.jar
+          name: course-management-jar
+          path: target/*.jar
+          retention-days: 5
+
+  sast:
+    name: SAST (Semgrep)
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.x"
+
+      - name: Install Semgrep
+        run: pip install semgrep
+
+      - name: Semgrep Security Scan
+        run: semgrep --config p/default --sarif --output=semgrep.sarif
+
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v4
+        with:
+          sarif_file: semgrep.sarif
+        if: always()
