--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Run Gitleaks
         uses: docker://zricethezav/gitleaks:latest
         with:
-          args: detect --source . --no-git --verbose --exit-code 1
+          args: dir --verbose --redact --exit-code 1 .
